--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<div class="container">
-  <div class="class row">
+
+  <div class="class row" style="background-image: url('../assets/img/paris.jpg'); background-repeat: none; background-size: cover;">
+    <div class="col-md-3"></div>
     <div class="col-md-6 offset-md03">
       <app-todo></app-todo>
     </div>
+    <div class="col-md-3"></div>
   </div>
-</div>
