--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,17 +1,17 @@
-<div class="jumbotron" style="padding:45px 0px">
-  <h4 class="text-center">To Do List App</h4>
+<div class="jumbotron" style="padding: 45px 0px; margin: 0px 0px 18px 0px; width: 100%; border-radius: 0px; background-color: #a65541;">
+  <h4 class="text-center" style="color: #fff;">To Do List App</h4>
 </div>
 
 <div class="input-group">
-  <input type="text" class="form-control" #itemTitle>
-  <div class="input-group-addon hover-cursor" (click)="onAdd(itemTitle)">
-    <i class="fa fa-plus-circle fa-2x"></i>
+  <input type="text" value="Add a to-do..." class="form-control" #itemTitle style="color: #fff; background-color: rgba(166,85,65,0.75); margin-bottom: 18px; margin-right: 0px;">
+  <div class="input-group-addon hover-cursor" (click)="onAdd(itemTitle)" style="background-color: rgba(102,137,100,0.75); height: 0px; margin-left: 0px;">
+    <i class="fa fa-plus" style="position: absolute; top: 8px; right: 17px; font-size: 23px; color: #fff;"></i>
   </div>
 </div>
 
 <div style="margin:5px 0px">
     <ul class="list-group">
-      <li class="list-group-item" *ngFor="let item of toDoListArray">
+      <li class="list-group-item" *ngFor="let item of toDoListArray" style="margin-bottom: 3px; border-radius: 0px;">
         <span class="hover-cursor" [class.text-success]="item.isChecked" (click)="alterCheck(item.$key,item.isChecked)">
           <i class="fa fa-lg" [ngClass]="item.isChecked?'fa-check-circle-o':'fa-circle-thin'"></i>
         </span>
