--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -5,7 +5,7 @@
 <div class="input-group">
   <input type="text" value="Add a to-do..." class="form-control" #itemTitle style="color: #fff; background-color: rgba(166,85,65,0.75); margin-bottom: 18px; margin-right: 0px;">
   <div class="input-group-addon hover-cursor" (click)="onAdd(itemTitle)" style="background-color: rgba(102,137,100,0.75); height: 0px; margin-left: 0px;">
-    <i class="fa fa-plus" style="position: absolute; top: 8px; right: 17px; font-size: 23px; color: #fff;"></i>
+    <i class="fa fa-plus" style="position: absolute; top: 8px; right: 17px; font-size: 23px; color: #fff; z-index: 4;"></i>
   </div>
 </div>
 
